# genai-agent-hub

./: .gitignore  AGENTS.md  README.md
cookbook/: pageindex_RAG.ipynb
custom_agents_vscode/: Prompt Optimization Agent.agent.md
doc-reader-agent/: README.md  agent.py  pyproject.toml  requirements.txt
doc-reader-agent/doc_reader_agent/: agent.py  prompt.py
doc-reader-agent/tests/: test_agent.py
drupal-headless-converter/backend/: main.py  requirements.txt
drupal-headless-converter/backend/agents/: builder_agent.py  parser_agent.py  prompts.py  supervisor.py  tools.py
drupal-headless-converter/backend/tests/: test_builder_tools.py  test_parser_tools.py
drupal-headless-converter/frontend/: index.html
drupal-headless-converter/frontend/src/: main.jsx
drupal_headless_converter/frontend/: package.json
medical-ai-assistant/: README.md  pyproject.toml
medical-ai-assistant/medical_ai_assistant/: agent.py  main.py  prompts.py  tools.py
n8n_workflows/Enterprise_Search/: README.md  Search.json
n8n_workflows/Slack_Support_Agent/: README.md  Slack_AiSupport_Agent.json  servicenow.json
stock-analysis-agent/: .env.example  README.md  main.py  pyproject.toml
stock-analysis-agent/frontend/: index.html  script.js
stock-analysis-agent/stock_analysis/: __init__.py  agent.py  prompt.py
stock-analysis-agent/stock_analysis/prompts/: analysis_prompt.py  coordinator_prompt.py  fundamental_prompt.py  prediction_prompt.py  qualitative_prompt.py  risk_assessment_prompt.py  sentiment_prompt.py  technical_prompt.py
stock-analysis-agent/stock_analysis/sub_agents/analysis_agent/: __init__.py  agent.py  prompt.py  tools.py
stock-analysis-agent/stock_analysis/sub_agents/fundamental_agent/: __init__.py  agent.py  prompt.py  tools.py
stock-analysis-agent/stock_analysis/sub_agents/prediction_agent/: __init__.py  agent.py  prompt.py  tools.py
stock-analysis-agent/stock_analysis/sub_agents/qualitative_agent/: __init__.py  agent.py  prompt.py  tools.py
stock-analysis-agent/stock_analysis/sub_agents/risk_assessment_agent/: __init__.py  agent.py  prompt.py  tools.py
stock-analysis-agent/stock_analysis/sub_agents/sentiment_agent/: __init__.py  agent.py  prompt.py  tools.py
stock-analysis-agent/stock_analysis/sub_agents/technical_agent/: __init__.py  agent.py  prompt.py  tools.py
study-agent/: README.md  main.py  pyproject.toml
study-agent/frontend/: index.html  script.js
study-agent/study_agent/: agent.py  prompt.py  socratic_teacher_agent.py  tools.py  workflow_agent.py
study-agent/study_agent/prompts/: coordinator_prompt.py  teacher_prompt.py
study-agent/study_agent/sub_agents/: content_retrieval_agent.py  feedback_assessment_agent.py  interaction_agent.py  learning_plan_agent.py  personalization_agent.py  progress_tracking_agent.py
(+9 files in other folders)
