[project]
name = "doc-reader-agent"
version = "0.1.0"
description = "An autonomous agent for reading and summarizing documentation."
authors = ["LangChain"]

[project.dependencies]
deepagents = ">=0.0.1"
langchain = ">=0.2.0"
langgraph = ">=0.1.0"
langchain-google-genai = ">=1.0.0"
beautifulsoup4 = ">=4.12.3"
requests = ">=2.31.0"

[project.optional-dependencies]
dev = ["ruff >= 0.1.0"]
